* primitive card - fixed background color; * todos with status page - changed spacings;

--- a/app/_components/todo/primitive-card/PrimitiveCard.scss
+++ b/app/_components/todo/primitive-card/PrimitiveCard.scss
@@ -2,7 +2,6 @@
 @import '/app/_styles/color/variables.scss';
 
 .primitiveCard {
-    background-color: $main-dark-1-color;
     border-radius: 8px;
     font-size: small;
     height: 25px;
